# openbase-coder

./: .boilersync  .gitignore  AGENTS.md  README.md  manage.py  pyproject.toml  zensical.toml
.cursor/rules/: project-description.mdc
.github/workflows/: docs-pages.yml  release-standalone.yml
docs/: cloud-devspace.md  configuration.md  downloads.md  files-and-paths.md  getting-started.md  index.md  ios-tabs.md  local-only.md  manual-installation.md  release.md  troubleshooting.md  uninstall.md
docs/codebase-companion/: 00_Learning_Path.md  01_Repo_vs_Workspace.md  02_Dev_Cheatsheet.md  03_Request_Trace_Threads.md  2026-06-18 ELIF_Codebase.md  2026-06-18 ELIF_Setup.md  CHANGELOG.md  INDEX.md  README.md  SESSION_LOG.md
docs/codebase-companion/sessions/: 2026-06-19 Session_RampUp.md
docs/commands/: backend.md  bootstrap.md  claude-sync.md  claude.md  doctor.md  index.md  login.md  logout.md  plugins.md  restart.md  server.md  services-install.md  services-logs.md  services-regenerate.md  services-restart.md  services-start.md  services-status.md  services-stop.md  services-uninstall.md  services.md  setup.md
docs/plugins/: brain-score-concurrency.md  index.md
openbase_coder_cli/: __main__.py  backend_config.py  brain_score.py  cartesia_voice_catalog.py  claude_auth.py  cli_helpers.py  codex_backend_config.py  codex_home_instructions.py  dispatcher_config.py  linux_computer_use.py  livekit_announcer.py  livekit_start_announcer.py  livekit_voice_history.py  livekit_voice_route.py  logging.py  multi_config.py  paths.py  runtime.py
openbase_coder_cli/cli/: __init__.py  auth.py  backend.py  boilersync.py  bootstrap.py  claude.py  claude_chrome.py  claude_sync.py  codex_sync.py  computer_use.py  desktop.py  doctor.py  local_server.py  node.py  plugins.py  restart.py  routines.py  server.py  services.py  setup.py  super_agent_name.py  user.py  utils.py  vibes.py
openbase_coder_cli/config/: asgi.py  authentication.py  jwt_validation.py  proxy.py  serializers.py  settings.py  token_manager.py  urls.py  viewsets.py  wsgi.py
openbase_coder_cli/entrypoint/: manage.py
openbase_coder_cli/livekit_agent/: codex_app_client.py  codex_thread_state.py  codex_transport.py  codex_turns.py  livekit.py  speech_formatter.py  speech_replacements.py  super_agents_client.py
openbase_coder_cli/mcp/: apps.py  claude_thread_sync.py  mcp.py  models.py  projects.py  session_manager.py  thread_exchange.py  thread_import.py  thread_sync_common.py
openbase_coder_cli/openbase_coder_cli_app/: agents_md.py  approvals.py  apps.py  auth.py  backend_settings.py  brain_readiness.py  common.py  consumers.py  diagnostics.py  env_settings.py  ios_app_control.py  item_tags.py  livekit.py  middleware.py  models.py  plugins_tools.py  projects.py  reasoning_settings.py  reports.py  routines.py  routing.py  serializers.py  service_tier_settings.py  services_views.py  skills.py  tags.py  thread_cache.py  thread_favorites.py  thread_metadata.py  threads.py  urls.py  views.py
openbase_coder_cli/openbase_coder_cli_app/migrations/: 0001_initial.py  0002_remove_cron_models.py
openbase_coder_cli/plugins/: __init__.py  api.py  console.py  install.py  manager.py  models.py  skills.py  sources.py  spec.py  store.py
openbase_coder_cli/resources/: __init__.py
openbase_coder_cli/resources/sounds/: README.md  __init__.py
openbase_coder_cli/services/: boilersync.py  console_settings.py  definitions.py  installation.py  launchctl_tools.py  launchd.py  openbase_services.py  registry.py  restart.py  systemd.py  tailnet_devices.py  uv_tools.py  voice_warning.py
scripts/: build.sh  build_standalone_package.py  dev-sync.sh  git-sync.sh  install.sh  sign_standalone_package.py
scripts/git_sync/: __init__.py  analyze.py  commit_suggest.py  conflicts.py  gh_pr.py  git_utils.py  recommend.py  safety.py
tests/: test_agents_md.py  test_backend_cli.py  test_backend_settings_api.py  test_brain_readiness_api.py  test_cartesia_voice_settings.py  test_claude_auth.py  test_claude_chrome_cli.py  test_claude_sync_cli.py  test_claude_thread_sync.py  test_codex_sync_cli.py  test_computer_use_cli.py  test_desktop_cli.py  test_dispatcher_config.py  test_doctor.py  test_ios_app_control.py  test_ios_logs_api.py  test_jwt_validation.py  test_launchctl_tools.py  test_launchd_wrapper.py  test_linux_computer_use.py  test_livekit_agent_announcer.py  test_livekit_agent_codex_app_client.py  test_livekit_agent_super_agents_client.py  test_livekit_announcer.py  test_livekit_route_api.py  test_livekit_start_announcer.py  test_livekit_voice_route.py  test_node_package_manager.py  test_openbase_services.py  test_owner_identity.py  test_plugin_iframe_console.py  test_projects.py  test_reasoning_settings_api.py  test_reports_api.py  test_restart.py  test_routines_cli.py  test_runtime_package.py  test_service_definitions.py  test_service_status.py  test_service_tier_settings_api.py  (+17 more)
